# central-marketing-dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.docs/: 01-spec.md  02-plan.md  03-tasks.md  04-risks-and-limitations.md  05-internationalization-report.md  06-issue.md
cloud_functions/: __init__.py  scheduler_config.yaml
cloud_functions/etl_ads/: main.py  requirements.txt
cloud_functions/etl_alerts/: main.py  requirements.txt
cloud_functions/etl_ecommerce/: main.py  requirements.txt
cloud_functions/etl_mart/: main.py  requirements.txt
config/: platforms.yaml  sku_mapping.csv
docs/: cloud-logging.md  dashboard-specification.md  data-flow.md  looker-studio-setup.md
scripts/: deploy_functions.sh
scripts/demo_data/: README.md  __init__.py  ads.py  ecommerce.py  ga4.py  generator.py  load_to_bigquery.py
scripts/setup_gcloud/: 00-env.sh  01-create-project.sh  02-enable-apis.sh  03-create-service-account.sh  04-setup-bigquery.sh  05-setup-secret-manager.sh  06-create-gcs-bucket.sh  07-verify-setup.sh  99-cleanup.sh  README.md  run-all.sh
src/: main.py
src/extractors/: __init__.py  base.py  facebook_ads.py  ga4.py  google_ads.py  lazada.py  lazada_ads.py  line_ads.py  shopee.py  shopee_ads.py  tiktok_ads.py  tiktok_shop.py
src/loaders/: __init__.py  base.py  bigquery.py
src/models/: __init__.py  simple_alerts.py
src/pipelines/: __init__.py  ads_pipeline.py  alerts_pipeline.py  base.py  ecommerce_pipeline.py  mart_pipeline.py  product_pipeline.py
src/transformers/: __init__.py  ads.py  base.py  ga4.py  orders.py  products.py  sku_mapper.py
src/utils/: config.py  currency.py  datetime.py  logging.py
tests/: test_base.py
tests/cloud_functions/: __init__.py  test_cloud_functions.py
tests/extractors/: __init__.py  test_facebook_ads.py  test_ga4.py  (+8 more)
(+36 files in other folders)
