[project]
name = "central-marketing-dashboard"
version = "0.1.0"
description = "Centralized Marketing Dashboard - ETL pipeline for e-commerce and advertising platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API Clients
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # Google Cloud
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-storage>=2.13.0",
    "google-cloud-secret-manager>=2.17.0",
    "google-auth>=2.23.0",
    "google-ads>=22.1.0",

    # Facebook/Meta
    "facebook-business>=18.0.0",

    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Scheduling & Async
    "apscheduler>=3.10.0",

    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Logging
    "structlog>=23.2.0",

    # Date/Time
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",

    # Currency
    "forex-python>=1.8",

    # Statistics (for simple alerts)
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
